# pong

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dependencies.cmake
src/: Ball.cpp  Ball.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  InputHandler.cpp  InputHandler.hpp  Main.cpp  OpenGLDebugCallback.cpp  OpenGLDebugCallback.hpp  Paddle.cpp  Paddle.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/shaders/: vertex.vert
